Some confusion noticed with the noun "advice" when the verb "advise" (or form "advises") should be used.
Also noticed a typo in a commit I just pulled.
Combined all the fixes into a single patch. Hope that's alright.
Some confusion noticed with the noun "advice" when the verb "advise" (or form "advises") should be used.
Also noticed a typo in a commit I just pulled.
Combined all the fixes into a single patch. Hope that's alright.
| rG GnuPG | |||
| rG572bcacc287d doc: Fix typos | |||
| rG563db31467b2 doc: Fix typos | |||